# graph_neural_nets

./: .gitignore  GMN.ipynb  LICENSE  README.md  explore.ipynb  pyproject.toml  rough.py  test_GraphSim.ipynb  test_isonet.ipynb
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  models.rst  modules.rst
examples/ged/: aids_simgnn.py
sgmatch/models/: GMN.py  GraphSim.py  ISONET.py  NeuroMatch.py  SimGNN.py  __init__.py  matcher.py
sgmatch/models/tests/: test_GMN.py  test_ISONET.py
sgmatch/modules/: __init__.py  attention.py  encoder.py  propagation.py  scoring.py
sgmatch/utils/: utility.py
tests/ged/: test_GMN.py  test_simGNN.py
tests/utils/: dataset.py  parser.py
trained_models/: gmn_model.pkl
